samples/_failures_safe/1761208638_12a77a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18e8a39c.c: In function ‘main’:
./samples/SAFE/__tmp_18e8a39c.c:148: error: expected ‘{’ at end of input
